# Yebelo-Assignment

./: EXECUTIONGUIDE.md  README.md  TROUBLESHOOTING.md  package-lock.json  setup-frontend.sh  setup_structure.sh
yebelo-trading-analytics/: .gitignore  docker-compose.yml  package-lock.json
yebelo-trading-analytics/data-ingestion/: data_ingestion.py  requirements.txt
yebelo-trading-analytics/rsi-calculator/: Cargo.toml
yebelo-trading-analytics/rsi-calculator/src/: main.rs
yebelo-trading-analytics/trading-dashboard/: README.md  next.config.js  package.json  postcss.config.js  tailwind.config.js
yebelo-trading-analytics/trading-dashboard/app/: globals.css  layout.tsx  page.tsx
yebelo-trading-analytics/trading-dashboard/app/api/stream/: route.ts
yebelo-trading-analytics/trading-dashboard/app/api/tokens/: route.ts
