[package]
name = "rsi-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime for concurrent operations
tokio = { version = "1.35", features = ["full"] }

# Kafka/Redpanda client
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# Collections for storing price history
chrono = { version = "0.4", features = ["serde"] }